// SQLite database generated by node-gtfs,
// schema exported by DB Browser for SQLite,
// and converted to DBML by https://dbdiagram.io/d
// Docs: https://dbml.dbdiagram.io/docs

Table "agency"{
  "agency_id" text [unique]
  "agency_name" text [not null]
  "agency_url" text [not null]
  "agency_timezone" text [not null]
  "agency_lang" text
  "agency_phone" text
}

Table "stops"{
  "stop_id" text [pk]
  "stop_name" text
  "stop_lat" doubleprecision
  "stop_lon" doubleprecision
  "stop_code" text
  "location_type" integer
  "location_sub_type" text
  "parent_station" text
  "wheelchair_boarding" integer
}

Table "routes"{
  "agency_id" text
  "route_id" text [pk]
  "route_short_name" text
  "route_long_name" text
  "route_type" integer [not null]
  "route_desc" text
  "route_color" text
  "route_text_color" text
  "route_sort_order" integer
}

Table "trips"{
  "route_id" text [not null]
  "trip_id" text [pk, not null]
  "service_id" text [not null]
  "trip_headsign" text
  "direction_id" boolean
  "block_id" text
  "shape_id" text
  "wheelchair_accessible" integer
  "bikes_allowed" integer
}

Table "stop_times"{
  "trip_id" text [not null]
  "stop_id" text [not null]
  "arrival_time" interval
  "departure_time" interval [not null]
  "stop_sequence" integer [not null]
  "stop_headsign" text
  "pickup_type" integer [not null]
  "drop_off_type" integer [not null]
  "shape_dist_traveled" doubleprecision
}

Table "calendar_dates"{
  "service_id" text [not null]
  "date" numeric(8) [not null]
  "exception_type" integer [not null]
}

Table "shapes"{
  "shape_id" text [not null]
  "shape_pt_sequence" integer [not null]
  "shape_pt_lat" doubleprecision [not null]
  "shape_pt_lon" doubleprecision [not null]
  "shape_dist_traveled" doubleprecision
}

Table "pathways"{
  "pathway_id" text [pk]
  "pathway_mode" integer [not null]
  "is_bidirectional" boolean [not null]
  "from_stop_id" text [not null]
  "to_stop_id" text [not null]
  "traversal_time" integer
}

Table "feed_info"{
  "feed_id" text
  "feed_publisher_name" text [not null]
  "feed_publisher_url" text [not null]
  "feed_lang" text
  "feed_start_date" numeric(8)
  "feed_end_date" numeric(8)
  "feed_version" text
}

Ref: "agency"."agency_id" < "routes"."agency_id"[update: cascade, delete: cascade]
Ref: "routes"."route_id" < "trips"."route_id"[update: cascade, delete: cascade]
Ref: "trips"."trip_id" < "stop_times"."trip_id"[update: cascade, delete: cascade]
Ref: "stops"."stop_id" < "stop_times"."stop_id"[update: cascade, delete: cascade]
Ref: "stops"."stop_id" < "pathways"."from_stop_id"[update: cascade, delete: cascade]
Ref: "stops"."stop_id" < "pathways"."to_stop_id"[update: cascade, delete: cascade]
